<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|bottom"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/keyboard_bj"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_recordentry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:paddingLeft="10dp"
            android:textSize="23sp"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:maxLength="12"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:background="@drawable/tv_bj" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/keyboard_1"
                style="@style/key_a_text_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/key_1" />

            <Button
                android:id="@+id/keyboard_2"
                style="@style/key_a_text_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/key_2" />

            <Button
                android:id="@+id/keyboard_3"
                style="@style/key_a_text_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/key_3" />

            <Button
                android:id="@+id/keyboard_del"
                style="@style/key_b_text_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/key_del" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/keyboard_4"
                style="@style/key_a_text_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/key_4" />

            <Button
                android:id="@+id/keyboard_5"
                style="@style/key_a_text_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/key_5" />

            <Button
                android:id="@+id/keyboard_6"
                style="@style/key_a_text_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/key_6" />

            <Button
                android:id="@+id/keyboard_point"
                style="@style/key_b_text_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/key_point" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/keyboard_7"
                style="@style/key_a_text_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/key_7" />

            <Button
                android:id="@+id/keyboard_8"
                style="@style/key_a_text_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/key_8" />

            <Button
                android:id="@+id/keyboard_9"
                style="@style/key_a_text_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/key_9" />

            <Button
                android:id="@+id/keyboard_minus"
                style="@style/key_b_text_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/key_minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/keyboard_cancel"
                style="@style/key_b_text_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/key_cancel" />

            <Button
                android:id="@+id/keyboard_0"
                style="@style/key_a_text_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/key_0" />

            <Button
                android:id="@+id/keyboard_ok"
                style="@style/key_b_text_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/key_ok" />

            <Button
                android:id="@+id/keyboard_c"
                style="@style/key_b_text_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/key_c" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>